--- a/Tumor_identifier.ipynb
+++ b/Tumor_identifier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Loading the image files yes to the tumor array.\n",
     "tumor=[]\n",
-    "path='./Brain/Testing/yes/*.jpg'\n",
+    "path='./Testing/yes/*.jpg'\n",
     "for i in glob.iglob(path):\n",
     "    img=cv2.imread(i)\n",
     "    img=cv2.resize(img,(128,128))#Changing the shapes of the images for consistency img reading\n",
@@ -35,13 +35,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Loading of non tumor image files to the array.\n",
     "no_tumor=[]\n",
-    "path2='./Brain/Testing/no_tumor/*.jpg'\n",
+    "path2='./Testing/no_tumor/*.jpg'\n",
     "for i in glob.iglob(path2):\n",
     "    img=cv2.imread(i)\n",
     "    img=cv2.resize(img,(128,128))#Changing the shapes of the images for consistency img reading\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
        "(154, 128, 128, 3)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "(196, 128, 128, 3)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
        "(350, 128, 128, 3)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
